2010-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/Addin.cs: 

2010-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/Addin.cs: 

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/Addin.cs: dfdf

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs: sdfd

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/Addin.cs: ererer

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/Addin.cs: 

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/Addin.cs:
	* Mono.Addins/AddinAttribute.cs: Added comments.

2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/Addin.cs: Some test.

2010-07-26  lluis  <${AuthorEmail}>

	* Mono.Addins/Addin.cs: Un nou comentari.

2010-07-01  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.csproj:
	* Mono.Addins.Description/Extension.cs:
	* Mono.Addins.Description/Dependency.cs:
	* Mono.Addins.Description/AddinFlags.cs:
	* Mono.Addins.Description/ExtensionPoint.cs:
	* Mono.Addins.Description/AddinDependency.cs:
	* Mono.Addins.Description/AddinDescription.cs:
	* Mono.Addins.Description/ExtensionNodeSet.cs:
	* Mono.Addins.Description/NativeDependency.cs:
	* Mono.Addins.Localization/IAddinLocalizer.cs:
	* Mono.Addins.Description/ObjectDescription.cs:
	* Mono.Addins.Description/ModuleDescription.cs:
	* Mono.Addins.Description/ExtensionNodeType.cs:
	* Mono.Addins.Description/NodeTypeAttribute.cs:
	* Mono.Addins.Description/AssemblyDependency.cs:
	* Mono.Addins.Description/ExtensionCollection.cs:
	* Mono.Addins.Description/DependencyCollection.cs:
	* Mono.Addins.Localization/IPluralAddinLocalizer.cs:
	* Mono.Addins.Localization/IAddinLocalizerFactory.cs:
	* Mono.Addins.Description/ExtensionNodeDescription.cs:
	* Mono.Addins.Description/ExtensionPointCollection.cs:
	* Mono.Addins.Description/ConditionTypeDescription.cs:
	* Mono.Addins.Description/ExtensionNodeSetCollection.cs: