@@ -42,11 +42,7 @@ namespace Mono.Addins
 	/// </summary>
 	public class Addin
 	{
-<<<<<<< HEAD
-		// Now comentari test test 2 more test 2222 sdfsdf
-=======
-		// Now comentari test test 2 more test 2222 ass
->>>>>>> * Mono.Addins/Mono.Addins/Addin.cs:
+		// Now comentari test test 2 more test 2222 sdfsdf ass
 		AddinInfo addin;
 		string configFile;
 		string sourceFile;
