@@ -6,6 +6,10 @@
 
 	* Mono.Addins/Addin.cs: 
 
+2010-07-28  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Addins/Addin.cs: 
+
 2010-07-27  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Mono.Addins/Addin.cs: dfdf
